<resources>
    <string name="app_name">SallieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="formulir">Formulir</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="warung_makan">Warung Makan</string>
    <string name="konversi_suhu">Konversi Suhu</string>
    <string name="profil">Profil</string>
    <string name="keluar">Keluar</string>
    <string name="form_pendaftaran">Formulir Pendaftaran</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="masukkan_nomorhp">Masukkan Nomor HP</string>
    <string name="pilih_agama">Pilih Agama</string>
    <string name="pilih_gender">Pilih Jenis Kelamin</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="pilih_hobi">Pilih Hobi</string>
    <string name="menari">Menari</string>
    <string name="menyanyi">Menyanyi</string>
    <string name="membaca">Membaca</string>
    <string name="memasak">Memasak</string>
    <string name="daftar">DAFTAR</string>
    <string name="hasil_form">Hasil Form</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="agama">Agama</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="hobi">Hobi</string>
    <string name="warung">Warung Nusantara</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="masukkannama">Masukkan Nama</string>
    <string name="nomor_meja">Nomor Meja</string>
    <string name="masukkannomormeja">Masukkan Nomor Meja</string>
    <string name="makanan">Makanan</string>
    <string name="soto">Soto</string>
    <string name="timlo">Timlo</string>
    <string name="minuman">Minuman</string>
    <string name="teh">Teh Hangat</string>
    <string name="esteh">Es Teh</string>
    <string name="jeruk">Jeruk Hangat</string>
    <string name="esjeruk">Es Jeruk</string>
    <string name="hitung">HITUNG</string>
    <string name="zero">0</string>
    <string name="hargasoto">Rp8.000</string>
    <string name="hargatimlo">Rp10.000</string>
    <string name="hargateh">Rp2.500</string>
    <string name="hargajeruk">Rp3.000</string>
    <string name="hargaesteh">Rp3.000</string>
    <string name="hargaesjeruk">Rp4.000</string>
    <string name="titik">.</string>
    <string name="by">Oleh: Kasir</string>
    <string name="strip">--------------------------------</string>
    <string name="pesanan">Pesanan</string>
    <string name="totalharga">Total Harga</string>
    <string name="tanggal">Tanggal</string>
    <string name="jam">Jam</string>
    <string name="datestrip">-- / -- / ----</string>
    <string name="timestrip">-- : -- : --</string>
    <string name="angka">Masukkan Angka Suhu</string>
    <string name="hasil">Hasil</string>
    <string name="konversikan">KONVERSIKAN</string>
    <string name="pribadi">Informasi Pribadi</string>
    <string name="lahir">Tanggal Lahir</string>
    <string name="rumah">Alamat Rumah</string>
    <string name="sekolah">Asal Sekolah</string>
    <string name="kontak">Informasi Kontak</string>
    <string name="sallie">Sallie Marsha Tristanti</string>
    <string name="lahir2">29 Oktober 2008</string>
    <string name="tawang">Tawangrejo Sobokerto Ngemplak Boyolali</string>
    <string name="smk">SMKN 6 Surakarta</string>
    <string name="gmail">salliemarsha49@gmail.com</string>
    <string name="whatsapp">+62 882 0063 82565</string>
    <string name="instagram">sll1mrsha_</string>
    <string name="konfirmasi">Yakin ingin keluar?</string>
    <string name="konfirmasi2">Aplikasi akan ditutup dan kembali ke layar utama perangkat.</string>
    <string name="keluar2">KELUAR</string>
    <string name="batal">BATAL</string>
</resources>