<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/transaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode3"
    android:fillViewport="true"
    tools:context=".TransactionActivity">

  <LinearLayout
      android:id="@+id/llTransaction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="12dp"
        android:backgroundTint="@color/light_mode">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

          <ImageView
              android:id="@+id/ivRestaurant"
              android:layout_width="120dp"
              android:layout_height="120dp"
              android:src="@drawable/logo"
              android:layout_marginBottom="8dp"/>

          <TextView
              android:id="@+id/tvRestaurant"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/warung"
              android:textSize="22sp"
              android:textColor="@color/light_mode2"
              android:fontFamily="@font/poppins_bold"/>
        </LinearLayout>

        <!-- Nama Pelanggan -->
        <TextView
            android:id="@+id/tvCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pelanggan"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:textColor="@color/light_mode2"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/etCustomer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/masukkannama"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColorHint="@color/light_mode6"
            android:fontFamily="@font/poppins_regular"
            android:backgroundTint="@color/light_mode6"
            android:inputType="textPersonName"/>

        <!-- Nomor Meja -->
        <TextView
            android:id="@+id/tvTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_meja"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/light_mode2"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/etTable"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/masukkannomormeja"
            android:textColorHint="@color/light_mode6"
            android:padding="10dp"
            android:backgroundTint="@color/light_mode6"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:inputType="number"/>

        <!-- Makanan -->
        <TextView
            android:id="@+id/tvFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makanan"
            android:textSize="20sp"
            android:textColor="@color/light_mode2"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="24dp"/>

        <!-- Soto -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="6dp">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:text="@string/soto"
              android:textSize="18sp"
              android:textColor="@color/light_mode2"
              android:fontFamily="@font/poppins_regular"/>

          <EditText
              android:id="@+id/etSotoQuantity"
              android:layout_width="0dp"
              android:layout_height="48dp"
              android:layout_weight="1"
              android:hint="@string/zero"
              android:textColorHint="@color/light_mode6"
              android:gravity="center"
              android:inputType="number"
              android:backgroundTint="@color/light_mode6"/>

          <TextView
              android:text="@string/hargasoto"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="end"
              android:textColor="@color/light_mode2"
              android:textSize="18sp"/>
        </LinearLayout>

        <!-- Timlo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="6dp">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:text="@string/timlo"
              android:textSize="18sp"
              android:textColor="@color/light_mode2"
              android:fontFamily="@font/poppins_regular"/>

          <EditText
              android:id="@+id/etTimloQuantity"
              android:layout_width="0dp"
              android:layout_height="48dp"
              android:layout_weight="1"
              android:hint="@string/zero"
              android:textColorHint="@color/light_mode6"
              android:gravity="center"
              android:inputType="number"
              android:backgroundTint="@color/light_mode6"/>

          <TextView
              android:text="@string/hargatimlo"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="end"
              android:textColor="@color/light_mode2"
              android:textSize="18sp"/>
        </LinearLayout>


        <!-- Minuman -->
        <TextView
            android:id="@+id/tvDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minuman"
            android:textSize="20sp"
            android:textColor="@color/light_mode2"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"/>

        <!-- Teh Hangat -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="6dp">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:text="@string/teh"
              android:textSize="18sp"
              android:textColor="@color/light_mode2"
              android:fontFamily="@font/poppins_regular"/>

          <EditText
              android:id="@+id/etTehQuantity"
              android:layout_width="0dp"
              android:layout_height="48dp"
              android:layout_weight="1"
              android:hint="@string/zero"
              android:textColorHint="@color/light_mode6"
              android:gravity="center"
              android:inputType="number"
              android:backgroundTint="@color/light_mode6"/>

          <TextView
              android:text="@string/hargateh"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="end"
              android:textColor="@color/light_mode2"
              android:textSize="18sp"/>
        </LinearLayout>

        <!-- Jeruk Hangat -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="6dp">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:text="@string/jeruk"
              android:textSize="18sp"
              android:textColor="@color/light_mode2"
              android:fontFamily="@font/poppins_regular"/>

          <EditText
              android:id="@+id/etJerukQuantity"
              android:layout_width="0dp"
              android:layout_height="48dp"
              android:layout_weight="1"
              android:hint="@string/zero"
              android:textColorHint="@color/light_mode6"
              android:gravity="center"
              android:inputType="number"
              android:backgroundTint="@color/light_mode6"/>

          <TextView
              android:text="@string/hargajeruk"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="end"
              android:textColor="@color/light_mode2"
              android:textSize="18sp"/>
        </LinearLayout>

        <!-- Es Teh -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="6dp">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:text="@string/esteh"
              android:textSize="18sp"
              android:textColor="@color/light_mode2"
              android:fontFamily="@font/poppins_regular"/>

          <EditText
              android:id="@+id/etEsTehQuantity"
              android:layout_width="0dp"
              android:layout_height="48dp"
              android:layout_weight="1"
              android:hint="@string/zero"
              android:textColorHint="@color/light_mode6"
              android:gravity="center"
              android:inputType="number"
              android:backgroundTint="@color/light_mode6"/>

          <TextView
              android:text="@string/hargaesteh"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="end"
              android:textColor="@color/light_mode2"
              android:textSize="18sp"/>
        </LinearLayout>

        <!-- Es Jeruk -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="6dp">

          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:text="@string/esjeruk"
              android:textSize="18sp"
              android:textColor="@color/light_mode2"
              android:fontFamily="@font/poppins_regular"/>

          <EditText
              android:id="@+id/etEsJerukQuantity"
              android:layout_width="0dp"
              android:layout_height="48dp"
              android:layout_weight="1"
              android:hint="@string/zero"
              android:textColorHint="@color/light_mode6"
              android:gravity="center"
              android:inputType="number"
              android:backgroundTint="@color/light_mode6"/>

          <TextView
              android:text="@string/hargaesjeruk"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="end"
              android:textColor="@color/light_mode2"
              android:textSize="18sp"/>
        </LinearLayout>




        <!-- Tombol -->
        <Button
            android:id="@+id/btCalculate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/hitung"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/light_mode1"
            android:textColor="@color/light_mode2"
            android:fontFamily="@font/poppins_medium"/>

      </LinearLayout>

    </androidx.cardview.widget.CardView>

  </LinearLayout>

</ScrollView>
