<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <!-- Card 1: Foto Profil & Nama -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfile1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/light_mode"
            app:cardCornerRadius="25dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profil"
                    android:textSize="26sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/light_mode2"
                    android:layout_marginTop="12dp"/>

                <!-- Foto Profil -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvImageProfile"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="80dp"
                    app:cardElevation="12dp"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@android:color/transparent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/photo" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sallie"
                    android:layout_marginTop="16dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/light_mode2"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 2: Informasi Pribadi & Kontak -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cvProfile2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:backgroundTint="@color/light_mode"
            app:cardCornerRadius="25dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Informasi Pribadi -->
                <TextView
                    android:id="@+id/tvInformation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pribadi"
                    android:textSize="18sp"
                    android:textColor="@color/light_mode2"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"/>

                <!-- Data Personal Row -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp">

                    <!-- Row Birthdate -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/birthdate"
                            android:layout_marginStart="5dp"
                            app:tint="@color/light_mode2" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="20dp">

                            <TextView
                                android:id="@+id/tvBirthDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lahir"
                                android:textSize="18sp"
                                android:textColor="@color/light_mode6"
                                android:fontFamily="@font/poppins_medium" />

                            <TextView
                                android:id="@+id/tvBirthDate2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lahir2"
                                android:textSize="18sp"
                                android:textColor="@color/light_mode2"
                                android:fontFamily="@font/poppins_regular" />
                        </LinearLayout>
                    </LinearLayout>

                    <!-- Row Address -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/address"
                            android:layout_marginStart="5dp"
                            app:tint="@color/light_mode2" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="20dp">

                            <TextView
                                android:id="@+id/tvAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rumah"
                                android:textSize="18sp"
                                android:textColor="@color/light_mode6"
                                android:fontFamily="@font/poppins_medium" />

                            <TextView
                                android:id="@+id/tvAddress2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tawang"
                                android:textSize="18sp"
                                android:textColor="@color/light_mode2"
                                android:fontFamily="@font/poppins_regular" />
                        </LinearLayout>
                    </LinearLayout>

                    <!-- Row School -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/school"
                            android:layout_marginStart="5dp"
                            app:tint="@color/light_mode2" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="20dp">

                            <TextView
                                android:id="@+id/tvSchool"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sekolah"
                                android:textSize="18sp"
                                android:textColor="@color/light_mode6"
                                android:fontFamily="@font/poppins_medium" />

                            <TextView
                                android:id="@+id/tvSchool2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/smk"
                                android:textSize="18sp"
                                android:textColor="@color/light_mode2"
                                android:fontFamily="@font/poppins_regular" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <!-- Informasi Kontak -->
                <TextView
                    android:id="@+id/tvInformation2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kontak"
                    android:textSize="18sp"
                    android:textColor="@color/light_mode2"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="15dp"/>

                <!-- Row Contact Icons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/gmail"/>

                        <TextView
                            android:id="@+id/tvGmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gmail"
                            android:layout_marginStart="20dp"
                            android:textSize="18sp"
                            android:textColor="@color/light_mode2"
                            android:fontFamily="@font/poppins_regular" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/whatsapp"/>

                        <TextView
                            android:id="@+id/tvWhatsApp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/whatsapp"
                            android:layout_marginStart="20dp"
                            android:textSize="18sp"
                            android:textColor="@color/light_mode2"
                            android:fontFamily="@font/poppins_regular" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/instagram"/>

                        <TextView
                            android:id="@+id/tvInstagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instagram"
                            android:layout_marginStart="20dp"
                            android:textSize="18sp"
                            android:textColor="@color/light_mode2"
                            android:fontFamily="@font/poppins_regular" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>